[fix] (ABC-184) contentHeight - title truncation - homogenous horizontal button alignment
- refactored dynamic carousel content height and calling it within the initial render
- horizontal button alignment on same level
- slds-has-flexi-truncate has conflicts with the carousel component if rendering a second page with panels ( e.g. 1st page with 5 panels -ok- next page with 2 panels will take the whole page due to flex-grow ). In combination with slds-truncate it also prevents the expected whole panel resizing. I've reimplemented the css as a temporary working solution until further advisory.

--- a/src/modules/base/carousel/carousel.css
+++ b/src/modules/base/carousel/carousel.css
@@ -4,10 +4,6 @@
     max-width: 100%;
 }
 
-.avonni-carousel__content {
-    height: 12rem;
-}
-
 .avonni-carousel__content-title {
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -15,6 +11,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: pre-line;
+}
+
+.avonni-carousel__content-description {
+    height: 2.25rem;
 }
 
 .avonni-carousel__nav-button {
